# BeaconNode

./: .editorconfig  .gitignore  Blueprint.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_identity.sh  vcpkg.json
cmake/: CompilerWarnings.cmake
config/: beaconnode.example.toml
deploy/bootstrap/: bootstrap-node.toml  docker-compose.yml  relay-node.toml
docs/: architecture.md  deployment.md  protocol.md  resilience.md  security.md
examples/: python_probe_peer.py  python_register_agent.py  python_sync_two_nodes.py
proto/beaconnode/v1/: gossip.proto  registry.proto
python/: README.md  pyproject.toml
python/src/beaconnode/: __init__.py  client.py  framing.py  identity.py  models.py  peer.py  sync.py
python/src/beaconnode/proto/: __init__.py
python/src/beaconnode/proto/beaconnode/: __init__.py
python/src/beaconnode/proto/beaconnode/v1/: __init__.py  registry_pb2.py
python/tests/: test_client.py  test_framed_protobuf.py  test_sync.py
src/beacon/: agent_registry.cpp  agent_registry.hpp  config.cpp  config.hpp  control_protobuf.cpp  control_protobuf.hpp  control_protocol.cpp  control_protocol.hpp  crypto.cpp  crypto.hpp  framing.cpp  framing.hpp  gossip_scheduler.cpp  gossip_scheduler.hpp  identity_service.cpp  identity_service.hpp  identity_store.cpp  identity_store.hpp  peer_handshake.cpp  peer_handshake.hpp  registry_sync.cpp  registry_sync.hpp  reputation.cpp  reputation.hpp  types.hpp
src/beacon_engine/: main.cpp
src/beacon_net/: control_server.cpp  control_server.hpp  gossip_service.cpp  gossip_service.hpp  persistence_service.cpp  persistence_service.hpp  secure_buffer.hpp  sync_client.cpp  sync_client.hpp  udp_handshake_responder.cpp  udp_handshake_responder.hpp
tests/cpp/: agent_registry_tests.cpp  persistence_tests.cpp
tests/python/: test_churn_simulation.py  test_identity.py
tools/: generate_protos.ps1  run_churn_simulation.py
