[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaconnode-sdk"
version = "0.1.0"
description = "Python SDK for BeaconNode"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BeaconNode contributors" }]
dependencies = ["protobuf>=7.35.0", "cryptography>=42.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
